--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,7 +25,7 @@
   <!-- Footer -->
 
   <footer class="row">
-    <div class="small-12 columns small-centered">
+    <div class="small-12 columns small-centered text-center">
       <hr />
         <p>Delivering Happiness since 2012. Powered by Sinatra. Crafted with Sublime Text. ♡.</p>
     </div>
