--- a/views/_foundationjs.erb
+++ b/views/_foundationjs.erb
@@ -18,6 +18,9 @@
 <script src="javascripts/foundation/foundation.section.js"></script>
 <script src="javascripts/foundation/foundation.tooltips.js"></script>
 <script src="javascripts/foundation/foundation.topbar.js"></script>
+
+<script src="javascripts/custom.js"></script>
+
 <script>
   $(document).foundation();
 </script>
