--- a/views/_headernavbar.erb
+++ b/views/_headernavbar.erb
@@ -4,7 +4,7 @@
     <!-- Title Area -->
     <li class="name">
       <h1>
-        <a href="#">
+        <a href="/">
           being fruitful
         </a>
       </h1>
@@ -16,85 +16,18 @@
     <!-- Left Nav Section -->
     <ul class="left">
       <li class="divider"></li>
-      <li class="has-dropdown">
-        <a class="active" href="#">Main Item 1</a>
-        <ul class="dropdown">
-          <li><label>Section Name</label></li>
-          <li><a href="#" class="">Dropdown Level 1</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li class="divider"></li>
-          <li><label>Section Name</label></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li class="divider"></li>
-          <li><a href="#">See all &rarr;</a></li>
-        </ul>
-      </li>
-      <li class="divider"></li>
-      <li><a href="#">Main Item 2</a></li>
-      <li class="divider"></li>
-      <li class="has-dropdown">
-        <a href="#">Main Item 3</a>
-        <ul class="dropdown">
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li class="divider"></li>
-          <li><a href="#">See all &rarr;</a></li>
-        </ul>
-      </li>
-
     </ul>
 
     <!-- Right Nav Section -->
     <ul class="right">
       <li class="divider"></li>
       <li class="has-dropdown">
-        <a href="#">Main Item 4</a>
+        <a href="/">purple tentacle</a>
         <ul class="dropdown">
-          <li><label>Section Name</label></li>
-          <li class="has-dropdown">
-            <a href="#" class="">Has Dropdown, Level 1</a>
-            <ul class="dropdown">
-              <li><a href="#">Dropdown Options</a></li>
-              <li><a href="#">Dropdown Options</a></li>
-              <li class="has-dropdown">
-                <a href="#">Has Dropdown, Level 2</a>
-                <ul class="dropdown test">
-                  <li><a href="#">Subdropdown Option</a></li>
-                  <li><a href="#">Subdropdown Option</a></li>
-                  <li><a href="#">Subdropdown Option</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Subdropdown Option</a></li>
-              <li><a href="#">Subdropdown Option</a></li>
-              <li><a href="#">Subdropdown Option</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
+          <li><a href="/statistic">Statistic</a></li>
+          <li><a href="#">Account Info</a></li>
           <li class="divider"></li>
-          <li><label>Section Name</label></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li class="divider"></li>
-          <li><a href="#">See all &rarr;</a></li>
-        </ul>
-      </li>
-      <li class="divider"></li>
-      <li><a href="#">Main Item 5</a></li>
-      <li class="divider"></li>
-      <li class="has-dropdown">
-        <a href="#">Main Item 6</a>
-        <ul class="dropdown">
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li><a href="#">Dropdown Option</a></li>
-          <li class="divider"></li>
-          <li><a href="#">See all &rarr;</a></li>
+          <li><a href="#">Log out</a></li>
         </ul>
       </li>
     </ul>
