better environment handling

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,6 +28,7 @@
     <div class="small-12 columns small-centered text-center">
       <hr />
         <p>Delivering Happiness since 2012. Powered by Sinatra. Crafted with Sublime Text. ♡.</p>
+        <p><small>env:<%= settings.environment %></small></p>
     </div>
   </footer>
 
