--- a/views/_foundationjs.erb
+++ b/views/_foundationjs.erb
@@ -1,25 +1,25 @@
 <script>
-  document.write('<script src=javascripts/vendor/'
+  document.write('<script src=/javascripts/vendor/'
     + ('__proto__' in {} ? 'zepto' : 'jquery')
     + '.js><\/script>');
 </script>
 
-<script src="javascripts/foundation/foundation.js"></script>
+<script src="/javascripts/foundation/foundation.js"></script>
 <script src="javascripts/foundation/foundation.alerts.js"></script>
-<script src="javascripts/foundation/foundation.clearing.js"></script>
-<script src="javascripts/foundation/foundation.cookie.js"></script>
-<script src="javascripts/foundation/foundation.dropdown.js"></script>
-<script src="javascripts/foundation/foundation.forms.js"></script>
-<script src="javascripts/foundation/foundation.joyride.js"></script>
-<script src="javascripts/foundation/foundation.magellan.js"></script>
-<script src="javascripts/foundation/foundation.orbit.js"></script>
-<script src="javascripts/foundation/foundation.placeholder.js"></script>
-<script src="javascripts/foundation/foundation.reveal.js"></script>
-<script src="javascripts/foundation/foundation.section.js"></script>
-<script src="javascripts/foundation/foundation.tooltips.js"></script>
-<script src="javascripts/foundation/foundation.topbar.js"></script>
+<script src="/javascripts/foundation/foundation.clearing.js"></script>
+<script src="/javascripts/foundation/foundation.cookie.js"></script>
+<script src="/javascripts/foundation/foundation.dropdown.js"></script>
+<script src="/javascripts/foundation/foundation.forms.js"></script>
+<script src="/javascripts/foundation/foundation.joyride.js"></script>
+<script src="/javascripts/foundation/foundation.magellan.js"></script>
+<script src="/javascripts/foundation/foundation.orbit.js"></script>
+<script src="/javascripts/foundation/foundation.placeholder.js"></script>
+<script src="/javascripts/foundation/foundation.reveal.js"></script>
+<script src="/javascripts/foundation/foundation.section.js"></script>
+<script src="/javascripts/foundation/foundation.tooltips.js"></script>
+<script src="/javascripts/foundation/foundation.topbar.js"></script>
 
-<script src="javascripts/custom.js"></script>
+<script src="/javascripts/custom.js"></script>
 
 <script>
   $(document).foundation();
