--- a/views/index.haml
+++ b/views/index.haml
@@ -1,13 +1,21 @@
-.row
-  .large-6.large-centered.columns
-    %h2
-      Would you call this a successful day?
-    %ul.small-block-grid-1
-      %li
-        %a.large.button.expand.success#up YES
-      %li
-        %a.large.button.expand.alert#down NO
-#result.reveal-modal
+%h2
+  Would you call this a successful day?
+%ul.small-block-grid-1
+  %li
+    %a.large.button.expand.success#up YES
+  %li
+    %a.large.button.expand.alert#down NO
+#resultmodal.reveal-modal
   %h2 Awesome.
   %p.lead Thank you for your participation.
   %a.close-reveal-modal ×
+
+#editmodal.reveal-modal
+  %h2 What's your name?
+  %form#editnameform
+    %input#editname{:name => "editname", :type => "text", :value => @account ? @account.name : "" }
+    %a.small.button#editsave{:href=>""} Save
+  %a.close-reveal-modal ×
+
+
+
