--- a/views/_headernavbar.erb
+++ b/views/_headernavbar.erb
@@ -4,7 +4,7 @@
     <!-- Title Area -->
     <li class="name">
       <h1>
-        <a href="<%= @account.url %>">
+        <a href="/<%= @account.url %>">
           being fruitful
         </a>
       </h1>
