--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,8 +18,9 @@
 
   <!-- Main Section -->
   <div class="row">
-    <div class="large-6 large-centered columns">
+    <div id="responsivebox" class="large-6 large-centered columns">
       <%= yield %>
+      <span id ="graph">&nbsp;</span>
     </div>
   </div>
 
