--- a/views/_foundationjs.erb
+++ b/views/_foundationjs.erb
@@ -1,11 +1,11 @@
 <script>
   document.write('<script src=/javascripts/vendor/'
-    + ('__proto__' in {} ? 'zepto' : 'jquery')
+    + ('__proto__' in {} ? 'jquery' : 'jquery')
     + '.js><\/script>');
 </script>
 
 <script src="/javascripts/foundation/foundation.js"></script>
-<script src="javascripts/foundation/foundation.alerts.js"></script>
+<script src="/javascripts/foundation/foundation.alerts.js"></script>
 <script src="/javascripts/foundation/foundation.clearing.js"></script>
 <script src="/javascripts/foundation/foundation.cookie.js"></script>
 <script src="/javascripts/foundation/foundation.dropdown.js"></script>
@@ -19,8 +19,6 @@
 <script src="/javascripts/foundation/foundation.tooltips.js"></script>
 <script src="/javascripts/foundation/foundation.topbar.js"></script>
 
+<script src="/javascripts/jquery.sparkline.min.js"></script>
 <script src="/javascripts/custom.js"></script>
 
-<script>
-  $(document).foundation();
-</script>
