--- a/views/index.haml
+++ b/views/index.haml
@@ -1,10 +1,10 @@
-%h2
-  Would you call this a successful day?
+%h2.text-center
+  How is it going?
 %ul.small-block-grid-1
   %li
-    %a.large.button.expand.success#up YES
+    %a.large.button.expand.success#up super
   %li
-    %a.large.button.expand.alert#down NO
+    %a.large.button.expand.alert#down not so great
 #resultmodal.reveal-modal
   %h2 Awesome.
   %p.lead Thank you for your participation.
