--- a/views/_headernavbar.erb
+++ b/views/_headernavbar.erb
@@ -25,6 +25,7 @@
         <a href="/<%= @account.url %>" id="accountname"><%= @account.name %></a>
         <ul class="dropdown">
           <li><a href="" id="editmodal-link">Change name</a></li>
+          <li><a href="/logout">Logout</a></li>
           <li class="divider"></li>
           <li><a href="/new">Create new account</a></li>
         </ul>
