--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; user-scalable=0;">
+
   <title>fruitful beta</title>
 
   <link rel="stylesheet" href="/stylesheets/normalize.css" />
@@ -35,6 +38,7 @@
         <p><small>env:<%= settings.environment %>
           | votes:<span id="votes_count"><%= Vote.count %></span>
           | accounts:<span id="accounts_count"><%= Account.count %></span>
+          | session: <%= @session %>
 
         </small></p>
     </div>
