add to home screen script

--- a/views/_foundationjs.erb
+++ b/views/_foundationjs.erb
@@ -20,5 +20,12 @@
 <script src="/javascripts/foundation/foundation.topbar.js"></script>
 
 <script src="/javascripts/jquery.sparkline.min.js"></script>
+
+<script type="text/javascript">
+  var addToHomeConfig = {
+    returningVisitor: true
+  };
+</script>
+<script type="application/javascript" src="/javascripts/add2home.js"></script>
 <script src="/javascripts/custom.js"></script>
 
