--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" href="/stylesheets/normalize.css" />
   <link rel="stylesheet" href="/stylesheets/app.css" />
+  <link rel="stylesheet" href="/stylesheets/add2home.css" />
 
   <script src="/javascripts/vendor/custom.modernizr.js"></script>
 
