feedback depending on vote

--- a/views/index.haml
+++ b/views/index.haml
@@ -5,8 +5,14 @@
     %a.large.button.expand.success#up super
   %li
     %a.large.button.expand.alert#down not so great
-#resultmodal.reveal-modal
+
+#resultmodalpositive.reveal-modal
   %h2 Awesome.
+  %p.lead Thank you for your participation.
+  %a.close-reveal-modal ×
+
+#resultmodalnegative.reveal-modal
+  %h2 Bummer.
   %p.lead Thank you for your participation.
   %a.close-reveal-modal ×
 
