--- a/views/index.haml
+++ b/views/index.haml
@@ -2,9 +2,9 @@
   How is it going?
 %ul.small-block-grid-1
   %li
-    %a.large.button.expand.success#up super
+    %a.large.button.expand.success#up awesome
   %li
-    %a.large.button.expand.alert#down not so great
+    %a.large.button.expand.alert#down bummer
 
 #resultmodalpositive.reveal-modal
   %h2 Awesome.
