faster updating graph

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,7 +24,7 @@
   <div class="row">
     <div id="responsivebox" class="large-6 large-centered columns">
       <%= yield %>
-      <span id="graph">Click above and statistics will show up in a few seconds.</span>
+      <span id="tristategraph">Click above and statistics will show up in a few seconds.</span>
     </div>
   </div>
 
