--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,6 +25,8 @@
     <div id="responsivebox" class="large-6 large-centered columns">
       <%= yield %>
       <span id="tristategraph">Click above and statistics will show up in a few seconds.</span>
+      <span id="1d-piechart">&nbsp;</span>
+      <span id="7d-piechart">&nbsp;</span>
     </div>
   </div>
 
