hide empty charts

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,7 +24,7 @@
   <div class="row">
     <div id="responsivebox" class="large-6 large-centered columns">
       <%= yield %>
-      <span id="tristategraph">Statistics will show up in a few seconds.</span>
+      <span id="tristategraph">Click above and statistics will show up in a few seconds.</span>
       <span id="piecharts" class="pull right" style="display: none;">
         <span id="td-piechart">&nbsp;</span>&nbsp;td
         <span id="yd-piechart">&nbsp;</span>&nbsp;yd
