--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,12 +24,14 @@
   <div class="row">
     <div id="responsivebox" class="large-6 large-centered columns">
       <%= yield %>
-      <span id="tristategraph">Click above and statistics will show up in a few seconds.</span>
-      <span id="piecharts" class="pull right" style="display: none;">
-        <span id="td-piechart">&nbsp;</span>&nbsp;td
-        <span id="yd-piechart">&nbsp;</span>&nbsp;yd
-        <span id="wk-piechart">&nbsp;</span>&nbsp;wk
-      </span>
+      <p>
+        <span id="tristategraph">Click above and statistics will show up in a few seconds.</span>
+        <span id="piecharts" class="pull right" style="display: none;">
+          <span id="td-piechart">&nbsp;</span>&nbsp;td
+          <span id="yd-piechart">&nbsp;</span>&nbsp;yd
+          <span id="wk-piechart">&nbsp;</span>&nbsp;wk
+        </span>
+      </p>
     </div>
   </div>
 
@@ -40,7 +42,7 @@
   <footer class="row">
     <div class="small-12 columns small-centered text-center">
       <hr />
-      <p>Delivering Happiness since 2012. Powered by Sinatra. Crafted with Sublime Text. ♡</p>
+      <p><!--Delivering Happiness since 2012. Powered by Sinatra. Crafted with Sublime Text. -->♡</p>
     </div>
   </footer>
 
