--- a/views/layout.erb
+++ b/views/layout.erb
@@ -27,9 +27,10 @@
       <p>
         <span id="tristategraph">Click above and statistics will show up in a few seconds.</span>
         <span id="piecharts" class="pull right" style="display: none;">
-          <span id="td-piechart">&nbsp;</span>&nbsp;td
-          <span id="yd-piechart">&nbsp;</span>&nbsp;yd
-          <span id="wk-piechart">&nbsp;</span>&nbsp;wk
+          <span id="td-piechart">&nbsp;</span>td
+          <span id="yd-piechart">&nbsp;</span>yd
+          <span id="wk-piechart">&nbsp;</span>wk
+          <span id="mo-piechart">&nbsp;</span>mo
         </span>
       </p>
     </div>
