--- a/views/_headernavbar.erb
+++ b/views/_headernavbar.erb
@@ -16,6 +16,7 @@
     <!-- Left Nav Section -->
     <ul class="left">
       <li class="divider"></li>
+      <li><a  href="" data-reveal-id="proplanmodal">Pro Plan</a></li>
     </ul>
 
     <!-- Right Nav Section -->
@@ -24,7 +25,7 @@
       <li class="has-dropdown">
         <a href="/<%= @account.url %>" id="accountname"><%= @account.name %></a>
         <ul class="dropdown">
-          <li><a href="" id="editmodal-link">Change name</a></li>
+          <li><a href="" id="editmodal-link">Change Name</a></li>
           <li><a href="" id="logoutmodal-link">Logout</a></li>
         </ul>
       </li>
