--- a/views/index.haml
+++ b/views/index.haml
@@ -35,4 +35,16 @@
     %a.small.alert.button#logout{:href=> "#{@account.url}/logout"} Proceed logout
   %a.close-reveal-modal ×
 
+#proplanmodal.reveal-modal
+  %h2 Go Pro!
+  %p.lead
+    Get access to all data.<br />
+    Create your own statistics.<br />
+    %small
+      One simple REST-JSON API call.
+  %p.lead
+    Ask your own questions.
+  %p
+    Contact us. Twitter: <a href="https://twitter.com/happinessmetric" target="_blank">@happinessmetric</a>
+  %a.close-reveal-modal ×
 
