added language to texts

--- a/views/index.haml
+++ b/views/index.haml
@@ -38,12 +38,13 @@
 #proplanmodal.reveal-modal
   %h2 Go Pro!
   %p.lead
-    Get access to all data.<br />
-    Create your own statistics.<br />
+    Get access to all data to create your own statistics.<br />
     %small
       One simple REST-JSON API call.
   %p.lead
-    Ask your own questions.
+    Ask your own questions for a more personal touch.
+  %p.lead
+    Delete / edit entries to amend errors.
   %p
     Contact us. Twitter: <a href="https://twitter.com/happinessmetric" target="_blank">@happinessmetric</a>
   %a.close-reveal-modal ×
