--- a/views/_headernavbar.erb
+++ b/views/_headernavbar.erb
@@ -23,6 +23,14 @@
     <ul class="right">
       <li class="divider"></li>
       <li class="has-dropdown">
+        <a href="" id="">Language</a>
+        <ul class="dropdown">
+          <li><a href="" class="setLanguage" data-language="en">English</a></li>
+          <li><a href="" class="setLanguage" data-language="de">Deutsch</a></li>
+        </ul>
+      </li>
+      <li class="divider"></li>
+      <li class="has-dropdown">
         <a href="/<%= @account.url %>" id="accountname"><%= @account.name %></a>
         <ul class="dropdown">
           <li><a href="" id="editmodal-link">Change Name</a></li>
