--- a/views/index.haml
+++ b/views/index.haml
@@ -46,6 +46,6 @@
   %p.lead
     Delete / edit entries to amend errors.
   %p
-    Contact us. Twitter: <a href="https://twitter.com/happinessmetric" target="_blank">@happinessmetric</a>
+    Contact us: <a href="https://twitter.com/happinessmetric" target="_blank">@happinessmetric</a>
   %a.close-reveal-modal ×
 
