--- a/views/_headernavbar.erb
+++ b/views/_headernavbar.erb
@@ -16,7 +16,9 @@
     <!-- Left Nav Section -->
     <ul class="left">
       <li class="divider"></li>
-      <li><a  href="" data-reveal-id="proplanmodal">Pro Plan</a></li>
+      <li><a href="" data-reveal-id="aboutmodal">About</a></li>
+      <li class="divider"></li>
+      <li><a href="" data-reveal-id="proplanmodal">Pro Plan</a></li>
     </ul>
 
     <!-- Right Nav Section -->
