--- a/views/index.haml
+++ b/views/index.haml
@@ -44,3 +44,13 @@
     Contact us: <a href="https://twitter.com/happinessmetric" target="_blank">@happinessmetric</a>
   %a.close-reveal-modal ×
 
+#aboutmodal.reveal-modal
+  %h2 Track happiness
+  %p.lead Easy to set up & easy to use
+  %p Open this page on a mobile device like an iPod touch or an iPad.
+  %p Place it next to a trafficked place in your office (front desk, coffee machine, e.g.) and let people use it.
+  %p There is no step 3 :)
+  %p.lead
+    How we use it
+  %img{:src => "/usecase.png"}
+  %a.close-reveal-modal ×
