--- a/views/index.haml
+++ b/views/index.haml
@@ -48,7 +48,7 @@
   %h2 Track happiness
   %p.lead Easy to set up & easy to use
   %p Open this page on a mobile device like an iPod touch or an iPad.
-  %p Place it next to a trafficked place in your office (front desk, coffee machine, e.g.) and let people use it.
+  %p Place it next to a trafficked place in your office (e.g., front desk, coffee machine) and let people use it.
   %p There is no step 3 :)
   %p.lead
     How we use it
