--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
   <meta name="apple-mobile-web-app-title" content="fruitful">
 
-  <title>fruitful beta</title>
+  <title>being fruitful</title>
 
   <link rel="stylesheet" href="/stylesheets/normalize.css" />
   <link rel="stylesheet" href="/stylesheets/app.css" />
