dded some statistics

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -43,7 +43,8 @@
   <footer class="row">
     <div class="small-12 columns small-centered text-center">
       <hr />
-      <p><!--Delivering Happiness since 2012. Powered by Sinatra. Crafted with Sublime Text. -->♡</p>
+      <p><!--Delivering Happiness since 2012. Powered by Sinatra. Crafted with Sublime Text. --><strong>♡</strong>
+      <small> | A: <%= Account.count %> | V: <%= Vote.count %></small></p>
     </div>
   </footer>
 
