--- a/views/_headernavbar.erb
+++ b/views/_headernavbar.erb
@@ -5,7 +5,7 @@
     <li class="name">
       <h1>
         <a href="/<%= @account.url %>">
-          being fruitful
+          hello <%= @account.name %>
         </a>
       </h1>
     </li>
