--- a/views/layout.erb
+++ b/views/layout.erb
@@ -35,8 +35,8 @@
         </span>
       </p>
       <p class="hiddenchart" style="display: none;">
-        Sun <span id="weekday-barchart">More statistics will show up in a few seconds.</span> Sat
-         | # Sun <span id="activity-barchart"></span> Sat
+        <span class="pull left">Sun <span id="weekday-barchart">More statistics will show up in a few seconds.</span> Sat</span>
+        <span class="pull right"># Sun <span id="activity-barchart"></span> Sat</span>
       </p>
     </div>
   </div>
